<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.Quiz.Second"
    tools:context=".ui.questions.QuestionTwoFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:fitsSystemWindows="true"
            app:navigationContentDescription="Back to the previous question"
            app:navigationIcon="@drawable/ic_chevron_left_black"
            app:title="Question 2" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/question_two"
        android:textSize="26sp"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_layout" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question">

        <RadioButton
            android:id="@+id/option_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two_answer_a" />

        <RadioButton
            android:id="@+id/option_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two_answer_b" />

        <RadioButton
            android:id="@+id/option_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two_answer_c" />

        <RadioButton
            android:id="@+id/option_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two_answer_d" />

        <RadioButton
            android:id="@+id/option_five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two_answer_e" />

    </RadioGroup>

    <Button
        android:id="@+id/previous_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:enabled="false"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>